--- a/frontend-tests/SpecRunner.html
+++ b/frontend-tests/SpecRunner.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="lib/console-runner.js"></script>
   <script type="text/javascript" src="lib/sinon-1.4.2.js"></script>
   <script type="text/javascript" src="../core/static/js/jquery-1.8.1.js"></script>
   <script type="text/javascript" src="../core/static/js/underscore.js"></script>
@@ -27,6 +28,7 @@
       var htmlReporter = new jasmine.HtmlReporter();
 
       jasmineEnv.addReporter(htmlReporter);
+      jasmineEnv.addReporter(new jasmine.ConsoleReporter());
 
       jasmineEnv.specFilter = function(spec) {
         return htmlReporter.specFilter(spec);
